// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`not constant 1`] = `
Object {
  "_": "function validator(value) {
  return value !== 42
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`not custom 1`] = `
Object {
  "_": "function validator(value) {
  return !validator[\\"custom-0\\"](value)
}",
  "custom-0": "function (v) { return v === 42; }",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`not function 1`] = `
Object {
  "_": "function validator(value) {
  return typeof value !== 'number'
}",
  "explanations": Array [],
  "pure": true,
}
`;
